<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckBlue" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/txtViewNewPlayerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:lines="2"
                android:text="@string/newPlayerLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/blueHeader"
                android:textStyle="bold|italic"
                android:typeface="serif" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/txtViewPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/name"
                android:textColor="@color/blueSubHeader"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edtTextPlayerName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:hint="@string/nameHint"
                    android:inputType="text"
                    android:maxLength="13"
                    android:textColor="@color/blueItem" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/txtViewPlayerNameError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_marginLeft="40dp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="14sp"
                   />
            </LinearLayout>

            <TextView
                android:id="@+id/txtViewStrength"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:text="@string/strength"
                android:textColor="@color/blueSubHeader"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edtTextStrength"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:hint="@string/strengthHint"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/blueItem" >
                </EditText>

                <TextView
                    android:id="@+id/txtViewStrengthError"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:layout_marginLeft="40dp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnSave"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:text="@string/saveLabel"
                    android:textColor="@color/blueHeader"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnClear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginLeft="32dp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:text="@string/clearLabel"
                    android:textColor="@color/blueHeader"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- The navigation drawer -->

    <include layout="@layout/list_view_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>