<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckBlue" >
     <!-- definir cor de fundo -->

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
     	android:orientation="vertical">
     	
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >
        
              <TextView
		            android:id="@+id/textView13"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/blueHeader"
		            android:text="@string/playerListFcc"
		            android:textSize="30sp"/>
        
            <LinearLayout
        		android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		        
		        <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="#4169E1"
		            android:text="@string/player" 
		            android:padding="20dp" 
		            android:textSize="18sp"/>
		
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingLeft="95dp"
		            android:textColor="#4169E1"
		            android:text="@string/strength" 
		            
		            android:textSize="18sp"/>
        	</LinearLayout>  
     
   	 	<ListView
	        android:id="@+id/listViewPlayers"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="#6495ed">
	    </ListView>
	</LinearLayout>
	 
    </FrameLayout>

    <!-- The navigation drawer -->
   <include layout="@layout/list_view_navigation_drawer"/>
</android.support.v4.widget.DrawerLayout>