<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckBlue" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bckBlue"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bckBlue"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/txtViewProfileLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:text="@string/profile"
                android:textColor="@color/blueHeader"
                android:textSize="25sp" >
            </TextView>

            <LinearLayout
                android:id="@+id/layoutprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bckBlue"
                android:lines="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/layoutImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bckBlue"
                    android:lines="1"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="100dp"
                        android:layout_height="132dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/playerPhoto" />

                    <LinearLayout
                        android:id="@+id/layoutImage1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@color/bckBlue"
                        android:lines="2"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/layoutPlayerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/bckBlue"
                            android:lines="2" >

                            <TextView
                                android:id="@+id/txtProfileName"
                                android:layout_width="167dp"
                                android:layout_height="wrap_content"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" >
                            </TextView>

                            <EditText
                                android:id="@+id/edtTextProfileName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutProfileAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/bckBlue"
                            android:lines="2" >

                            <TextView
                                android:id="@+id/txtViewProfileAge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" >
                            </TextView>

                            <EditText
                                android:id="@+id/edtTxtProfileAge"
                                android:layout_width="140dp"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="2"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" >
                            </EditText>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutProfileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/bckBlue"
                            android:lines="2" >

                            <TextView
                                android:id="@+id/txtViewProfileNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" >
                            </TextView>

                            <EditText
                                android:id="@+id/edtTxtProfileNumber"
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="2"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" >
                            </EditText>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutProfileStrength"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/bckBlue"
                            android:lines="2" >

                            <TextView
                                android:id="@+id/txtViewProfileStrength"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" >
                            </TextView>

                            <EditText
                                android:id="@+id/edtTxtProfileStrength"
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="2"
                                android:textColor="@color/blueItem"
                                android:textSize="22sp" >
                            </EditText>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tf2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="4"
                android:text="@string/statistic"
                android:textColor="@color/blueHeader"
                android:textSize="25sp" >
            </TextView>

            <include layout="@layout/tabela_cabecalho_perfil_estatistica" />

            <include layout="@layout/item_pofile_statistic" />
        </LinearLayout>
    </FrameLayout>

    <!-- The navigation drawer -->

    <include layout="@layout/list_view_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>